--- a/css/style.css
+++ b/css/style.css
@@ -1,54 +1,64 @@
-* {
-    border: 2px solid black;
-}
-
-.box {
+.container {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 500px;
+    height: auto;
+    border: cyan solid 4px;
+    background: rgb(26, 85, 87);
     
 }
 
 .type {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    height: auto;
+    width: 465px;
+    padding: 0px;
+    margin: 30px;
+    background: plum;
+    border: 4px solid indigo;
     
-}
-
-.locbox {
+    
+  }
+  
+.farmbox {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    width: 450px;
+    height: 60px;
+    border: 4px solid darkslategray;
+    background: skyblue;
     
-}
+  }
 
 .loc {
-    display: flex;
-    height: 200px;
-    width: 200px;
+      display: flex;
+      
+      width: 120px;
+      height: 50px;
 
-    font-size: 25px;
-    
-    justify-content: center;
+      margin-right: 20px;
+      border: darkgoldenrod solid 4px;
+  }
 
-    
-}
-
-.toonbox {
-    display: flex;
-    flex-direction: column;
-}
-
-.toons {
-    display: flex;
-    column-gap: 10px;
-}
-
-.icon {
-    display: flex;
-    height: 200px;
+  .loc img {
     width: auto;
-        
+    height: 50px;
+  }
+
+.toon {
+    display: flex;
+    
+    width: 50px;
+    height: 50px;
+    border: darkgoldenrod solid 4px;
+    background: yellow;
 }
 
-.icon img{
+.toon img {
     border-radius: 50%;
+    height: 50px;
 }
