--- a/css/style.css
+++ b/css/style.css
@@ -1,47 +1,115 @@
+.colorscheme {
+  color: rgb(252, 186, 186);
+  color: rgb(255, 204, 203);
+  color: rgb(252, 246, 225);
+  color: rgb(228, 242, 213);
+  color: rgb(203, 232, 190);
+  color: rgb(117, 217, 163);
+
+  color: rgb(227, 122, 122);
+  color: rgb(232, 102, 102);
+  color: rgb(227, 212, 158);
+  color: rgb(108, 128, 084);
+  color: rgb(031, 107, 090);
+  color: rgb(047, 140, 089);
+}
+
+
+body {
+  background-color: rgb(15, 15, 15);
+ 
+
+  max-width: 960px;
+  margin: auto;
+  
+}
+
+#page {
+  background-color: whitesmoke;
+  font-family: 'Kanit';
+
+}
+
+h1 {
+  font-size: 50px;
+  text-align: center;
+  margin-top: 0px;
+  border: black solid 10px;
+}
+
+h2 {
+  text-align: center;
+  color: rgb(250, 65, 65);
+  background-color: rgb(173, 214, 252);
+  border: rgb(51, 155, 252) solid 4px;
+
+}
+
+p {
+  padding: 10px 20px 10px 20px;
+}
 .container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 500px;
+    width: 700px;
     height: auto;
-    border: cyan solid 4px;
-    background: rgb(26, 85, 87);
+    margin: auto;
+    border: ;
+    background: ;
     
 }
 
 .type {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    
     height: auto;
-    width: 465px;
+    width: 700px;
     padding: 0px;
-    margin: 30px;
-    background: plum;
-    border: 4px solid indigo;
+    margin: 10px 0px 10px 0px;
+    background: rgb(253, 127, 127);
+    border: 4px solid rgb(250, 65, 65);
+    border-radius: 5px;
+
+    text-align: center;
+    font-size: 30px;
+    font-weight: 900;
+    color: rgb(0, 73, 141);
     
     
   }
   
+.area {
+  text-align: center;
+}
 .farmbox {
     display: flex;
     flex-direction: row;
-    width: 450px;
+    width: auto;
     height: 60px;
-    border: 4px solid darkslategray;
-    background: skyblue;
+    border: 4px solid rgb(28, 32, 34);
+    border-radius: 5px;
+    background: rgb(89, 97, 97);
+    
     
   }
 
 .loc {
       display: flex;
-      
-      width: 120px;
-      height: 50px;
-
+      align-items: center;
+      width: 200px;
+      height: 5px;
+      padding: 10px;
+      margin: 10px 20px 10px 10px;
       margin-right: 20px;
-      border: darkgoldenrod solid 4px;
+      border: rgb(51, 155, 252) solid 4px;
+      border-radius: 20px;
+      background-color: rgb(173, 214, 252);
+      font-size: 18px;
+      font-weight: 1;
+      text-align: end;
   }
 
   .loc img {
@@ -54,11 +122,45 @@
     
     width: 50px;
     height: 50px;
-    border: darkgoldenrod solid 4px;
-    background: yellow;
+    border: rgb(213, 213, 213) solid 4px;
+    border-radius: 50%;
+    background: rgb(0, 0, 0);
+    
+}
+
+.toonls {
+  display: flex;
+  
+  width: 50px;
+  height: 50px;
+  border: rgb(123, 191, 255) solid 4px;
+  border-radius: 50%;
+  background: rgb(0, 0, 0);
+  
+}
+
+.toonds {
+  display: flex;
+  
+  width: 50px;
+  height: 50px;
+  border: rgb(253, 127, 127) solid 4px;
+  border-radius: 50%;
+  background: rgb(0, 0, 0);
+  
 }
 
 .toon img {
     border-radius: 50%;
     height: 50px;
+}
+
+.toonls img {
+  border-radius: 50%;
+  height: 50px;
+}
+
+.toonds img {
+  border-radius: 50%;
+  height: 50px;
 }
